--- a/DanceAI/package.json
+++ b/DanceAI/package.json
@@ -19,7 +19,10 @@
         "framer-motion": "^11.1.7",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
+        "react-icons": "^5.2.0",
+        "react-intersection-observer": "^9.10.2",
         "react-router-dom": "^6.23.0",
+        "react-scroll-parallax": "^3.4.5",
         "react-webcam": "6.0.0",
         "scatter-gl": "^0.0.13"
     },
